tests/baselines/reference/unusedImports5.errors.txt
file2.ts(1,27): error TS6133: 'test2' is declared but its value is never read.


==== file1.ts (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export function test2() {
    
    }
    
==== file2.ts (1 errors) ====
    import {Calculator, test, test2} from "./file1"
                              ~~~~~
!!! error TS6133: 'test2' is declared but its value is never read.
    
    var x = new Calculator();
    x.handleChar();
    test();